--- a/plugin.ini
+++ b/plugin.ini
@@ -1,7 +1,7 @@
 [info]
 name="Project Guide"
 author="Eric C. Weig"
-description="Simple Omeka Plugin which allows admin to configure a link to a custom project guide.  The link displays at the admin item view level and on the admin dashboard.
+description="Omeka Plugin which allows administrators to configure a link to a custom project guide.  The link displays at the admin item view level and on the admin dashboard.
 license="MIT"
 link="https://github.com/uklibraries/ProjectGuide"
 support_link="https://github.com/uklibraries/ProjectGuide/issues"
