--- a/plugin.ini
+++ b/plugin.ini
@@ -8,4 +8,4 @@ support_link="https://github.com/uklibraries/ProjectGuide/issues"
 version="1.0"
 omeka_minimum_version="2.0"
 omeka_target_version="2.6"
-tags=""
+tags="project-management,documentation-tool,project-guide"
